name:                uih
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jhoxray/uih#readme
license:             BSD3
license-file:        LICENSE
author:              J X-Ray Ho
maintainer:          jho.xray@gmail.com
copyright:           Copyright: (c) 2016 J X-Ray Ho
category:            languages
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Logger
                     , SDL.Bindings
                     , SDL.InputText
                     , Color
                     , CSS.Box
                     , Widgets
                     , Screen.RawWidgets
                     , Screen.TestUI
  build-depends:       base >= 4.7 && < 5
                     , clock
                     , sdl2
                     , sdl2-ttf
                     , linear
                     , text
                     , ghc-prim
  default-language:    Haskell2010

executable uih
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sdl2
                     , sdl2-ttf
                     , linear
                     , uih
                     , sdl2-gfx
                     , ghc-prim
  default-language:    Haskell2010

executable uih-bench
    hs-source-dirs:      benchmarks
    main-is:             Main.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , sdl2
                       , sdl2-ttf
                       , linear
                       , uih
                       , sdl2-gfx
                       , ghc-prim
                       , random
                       , vector
                       , criterion
    default-language:    Haskell2010

test-suite uih-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , uih
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jhoxray/uih
